--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,40 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "plugin:@next/next/recommended",
+    "prettier"
+  ],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react", "prettier"],
+  "rules": {
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "linebreak-style": "off",
+    "quotes": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "react/no-array-index-key": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "react/jsx-pascal-case": "off",
+    "no-unused-expressions": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "object-curly-newline": "off",
+    "prefer-template": "off",
+    "no-param-reassign": "off",
+    "no-shadow": "off",
+    "no-return-assign": "off",
+    // "jsx-quotes":"off",
+    "react/jsx-props-no-spreading": "off"
+    // "import/order":"off"
+  }
 }
